--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
                                                 <ul class="dropdown-sec">
                                                     <span>
-                                                        <li><a href="#" class="primary-btn"> <i class="fa fa-lock"></i>
+                                                        <li><a href="#" class="primary-btn">
                                                                 Galeria de fotos</a></li>
                                                     </span>
                                                 </ul>
@@ -554,7 +554,7 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="consultation__text__item">
                                     <div class="section-title">
-                                        <h2>Conheça a <i>Clínica</i></h2>
+                                        <h2>Conheça A <i>Clínica</i></h2>
                                         <!-- <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
                                             multidisciplinar.</span> -->
                                     </div>
@@ -614,8 +614,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <h2 class="mb-2">A SUA Jornada de Maternidade Começa Aqui</h2>
-                        <span>Da gravidéz, ao apoio no pós-parto e ao crescimento do seu filhote!</span>
+                        <h2 class="mb-2">a SUA Jornada de Maternidade Começa Aqui</h2>
+                        <span>Da gravidez, ao apoio no pós-parto e ao crescimento do seu filhote!</span>
                     </div>
                 </div>
             </div>
@@ -813,10 +813,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
+                        <h2 class="mb-3">Agenda <i>A Clínica</i></h2>
                         <span>
-                            Cursos, workshops e atividades mensais
+                            Fique sempre atualizado sobre todas as atividades e serviços que existem n’ <i>A
+                                Clínica.</i>
                         </span>
-                        <h2>A nossa agenda - Novembro 2024</h2>
+
                     </div>
                 </div>
             </div>
@@ -994,7 +996,7 @@
                             <div class="profileImg">
                                 <img src="img/blog/blog-5.jpg" alt="user" class="cover">
                             </div>
-                            <h3>Nikhil Kumar<br><span>Web Designer</span></h3>
+                            <h3>A Clínica<br><span>a_clinica</span></h3>
                         </div>
                         <div class="dot">
                             <img src="img/icons/dot.png" alt="dot">
@@ -1118,7 +1120,8 @@
                 </div>
                 <div class="col-lg-12 text-center mt-4">
                     <div class="load__more">
-                        <a href="#" class="primary-btn"><i class="fa fa-instagram p-2"></i> Siga-nos</a>
+                        <a href="#" class="primary-btn"><i class="fa fa-instagram p-2"></i> Não perca as novidades:
+                            Siga-nos</a>
                     </div>
                 </div>
             </div>
@@ -1138,8 +1141,8 @@
                     <div class="col-lg-4 col-md-8">
                         <div class="footer__newslatter">
                             <form action="#">
-                                <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button>
+                                <!-- <input type="text" placeholder="Email">
+                                <button type="submit" class="site-btn">Subscrever</button> -->
                             </form>
                         </div>
                     </div>
@@ -1158,13 +1161,14 @@
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h5>Empresa</h5>
+                        <h5>A Clinica</h5>
                         <ul>
                             <li><a href="#">Sobre Nós</a></li>
-                            <li><a href="#">Departamentos</a></li>
-                            <li><a href="#">Encontre um Médico</a></li>
-                            <li><a href="#">Perguntas Frequentes</a></li>
-                            <li><a href="#">Notícias</a></li>
+                            <li><a href="#">Equipa</a></li>
+                            <li><a href="#">O Nosso Trabalho Humanitário</a></li>
+                            <li><a href="#">Agenda</a></li>
+                            <li><a href="#">Cursos</a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -1172,11 +1176,11 @@
                     <div class="footer__widget">
                         <h5>Links Rápidos</h5>
                         <ul>
-                            <li><a href="#">Preenchimentos Faciais</a></li>
-                            <li><a href="#">Cirurgia Mamária</a></li>
-                            <li><a href="#">Levantamento Corporal</a></li>
-                            <li><a href="#">Rosto & Pescoço</a></li>
-                            <li><a href="#">Redução de Gordura</a></li>
+                            <li><a href="#">Área Reservada</a></li>
+                            <li><a href="#">Consultas</a></li>
+                            <li><a href="#">Vacinaçao</a></li>
+                            <li><a href="#">Gravidez</a></li>
+                            <li><a href="#">Apoio ao domicílio</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1184,9 +1188,10 @@
                     <div class="footer__address">
                         <h5>Entre em Contato</h5>
                         <ul>
-                            <li><i class="fa fa-map-marker"></i> Sua localizacao cidade de Maputo</li>
-                            <li><i class="fa fa-phone"></i> +258 812 354 874</li>
-                            <li><i class="fa fa-envelope"></i> Support@gmail.com</li>
+                            <li><i class="fa fa-map-marker"></i>Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                            </li>
+                            <li><i class="fa fa-phone"></i> +258 84 1869 7194</li>
+                            <li><i class="fa fa-envelope"></i> geral@aaclinica-mz.com</li>
                         </ul>
                     </div>
                 </div>
