--- a/team.html
+++ b/team.html
@@ -7,10 +7,10 @@
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>a clinica</title>
-    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
+    <title>A clinica</title>
+    <link rel="fluid-icon" href="img/favicon.png" title="a clinica>
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    <link href=" https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
     <!-- Css Styles -->
@@ -261,7 +261,7 @@
 
                                                 <ul class="dropdown-sec">
                                                     <span>
-                                                        <li><a href="#" class="primary-btn"> <i class="fa fa-lock"></i>
+                                                        <li><a href="#" class="primary-btn">
                                                                 Galeria de fotos</a></li>
                                                     </span>
                                                 </ul>
@@ -357,7 +357,10 @@
 
                             <p>A Clínica tem uma equipa de profissionais dedicados e focados em proporcionar a melhor
                                 experiência possível dos
-                                pacientes na nossa instituição de saúde.
+                                pacientes na nossa instituição de saúde. <br><br>
+                                A nossa equipa multidisciplinar tem como missão acompanhar e apoiar a sua família em
+                                cada passo da jornada de
+                                maternidade e paternidade. <b>Somos a sua aldeia!</b>
                             </p>
                         </div>
                     </div>
@@ -706,14 +709,14 @@
     </section>
     <!-- Blog Details Section End -->
 
-
-    <footer class="footer mt-8">
+    <!-- Seção de Rodapé Início -->
+    <footer class="footer">
         <div class="footer__top">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <div class="footer__logo">
-                            <a href="#"><span class="logo" style="color: white;">Parto</span></a>
+                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-8">
@@ -739,13 +742,14 @@
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h5>Empresa</h5>
+                        <h5>A Clinica</h5>
                         <ul>
                             <li><a href="#">Sobre Nós</a></li>
-                            <li><a href="#">Departamentos</a></li>
-                            <li><a href="#">Encontre um Médico</a></li>
-                            <li><a href="#">Perguntas Frequentes</a></li>
-                            <li><a href="#">Notícias</a></li>
+                            <li><a href="#">Equipa</a></li>
+                            <li><a href="#">O Nosso Trabalho Humanitário</a></li>
+                            <li><a href="#">Agenda</a></li>
+                            <li><a href="#">Cursos</a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -753,11 +757,11 @@
                     <div class="footer__widget">
                         <h5>Links Rápidos</h5>
                         <ul>
-                            <li><a href="#">Preenchimentos Faciais</a></li>
-                            <li><a href="#">Cirurgia Mamária</a></li>
-                            <li><a href="#">Levantamento Corporal</a></li>
-                            <li><a href="#">Rosto & Pescoço</a></li>
-                            <li><a href="#">Redução de Gordura</a></li>
+                            <li><a href="#">Área Reservada</a></li>
+                            <li><a href="#">Consultas</a></li>
+                            <li><a href="#">Vacinaçao</a></li>
+                            <li><a href="#">Gravidez</a></li>
+                            <li><a href="#">Apoio ao domicílio</a></li>
                         </ul>
                     </div>
                 </div>
@@ -765,9 +769,10 @@
                     <div class="footer__address">
                         <h5>Entre em Contato</h5>
                         <ul>
-                            <li><i class="fa fa-map-marker"></i> Sua localizacao cidade de Maputo</li>
-                            <li><i class="fa fa-phone"></i> +258 812 354 874</li>
-                            <li><i class="fa fa-envelope"></i> Support@gmail.com</li>
+                            <li><i class="fa fa-map-marker"></i>Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                            </li>
+                            <li><i class="fa fa-phone"></i> +258 84 1869 7194</li>
+                            <li><i class="fa fa-envelope"></i> geral@aaclinica-mz.com</li>
                         </ul>
                     </div>
                 </div>
