--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
 
                                                 <ul class="dropdown-sec">
                                                     <span>
-                                                        <li><a href="#" class="primary-btn"> <i class="fa fa-lock"></i>
+                                                        <li><a href="#" class="primary-btn">
                                                                 Galeria de fotos</a></li>
                                                     </span>
                                                 </ul>
@@ -501,14 +501,17 @@
             </div>
         </div>
     </section>
+
+
+
     <!-- Seção de Rodapé Início -->
-    <footer class="footer mt-8">
+    <footer class="footer">
         <div class="footer__top">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <div class="footer__logo">
-                            <a href="#"><span class="logo" style="color: white;">Parto</span></a>
+                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-8">
@@ -534,13 +537,14 @@
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h5>Empresa</h5>
+                        <h5>A Clinica</h5>
                         <ul>
                             <li><a href="#">Sobre Nós</a></li>
-                            <li><a href="#">Departamentos</a></li>
-                            <li><a href="#">Encontre um Médico</a></li>
-                            <li><a href="#">Perguntas Frequentes</a></li>
-                            <li><a href="#">Notícias</a></li>
+                            <li><a href="#">Equipa</a></li>
+                            <li><a href="#">O Nosso Trabalho Humanitário</a></li>
+                            <li><a href="#">Agenda</a></li>
+                            <li><a href="#">Cursos</a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -548,11 +552,11 @@
                     <div class="footer__widget">
                         <h5>Links Rápidos</h5>
                         <ul>
-                            <li><a href="#">Preenchimentos Faciais</a></li>
-                            <li><a href="#">Cirurgia Mamária</a></li>
-                            <li><a href="#">Levantamento Corporal</a></li>
-                            <li><a href="#">Rosto & Pescoço</a></li>
-                            <li><a href="#">Redução de Gordura</a></li>
+                            <li><a href="#">Área Reservada</a></li>
+                            <li><a href="#">Consultas</a></li>
+                            <li><a href="#">Vacinaçao</a></li>
+                            <li><a href="#">Gravidez</a></li>
+                            <li><a href="#">Apoio ao domicílio</a></li>
                         </ul>
                     </div>
                 </div>
@@ -560,9 +564,10 @@
                     <div class="footer__address">
                         <h5>Entre em Contato</h5>
                         <ul>
-                            <li><i class="fa fa-map-marker"></i> Sua localizacao cidade de Maputo</li>
-                            <li><i class="fa fa-phone"></i> +258 812 354 874</li>
-                            <li><i class="fa fa-envelope"></i> Support@gmail.com</li>
+                            <li><i class="fa fa-map-marker"></i>Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                            </li>
+                            <li><i class="fa fa-phone"></i> +258 84 1869 7194</li>
+                            <li><i class="fa fa-envelope"></i> geral@aaclinica-mz.com</li>
                         </ul>
                     </div>
                 </div>
