header and footer

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <a href="#" class="primary-btn">Agendar</a>
         </div>
         <ul class="offcanvas__widget">
-            <li><a href="#"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
+            <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20</li>
             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
         </ul>
@@ -300,9 +300,9 @@
                                     </ul>
                                 </li>
                                 <a href="#" class="primary-btn" style="
-                                        right: 0;
-                                        position: absolute;
-                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                    right: 0;
+                                    position: absolute;
+                                "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
@@ -503,7 +503,6 @@
     </section>
 
 
-
     <!-- Seção de Rodapé Início -->
     <footer class="footer">
         <div class="footer__top">
@@ -517,8 +516,8 @@
                     <div class="col-lg-4 col-md-8">
                         <div class="footer__newslatter">
                             <form action="#">
-                                <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button>
+                                <!-- <input type="text" placeholder="Email">
+                                <button type="submit" class="site-btn">Subscrever</button> -->
                             </form>
                         </div>
                     </div>
@@ -606,6 +605,7 @@
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
+
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
