--- a/team.html
+++ b/team.html
@@ -144,7 +144,7 @@
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="./about.html">Sobre Nós</a></li>
-                                        <li><a class="active" href="./team.html">Equipa</a></li>
+                                        <li><a href="./team.html">Equipa</a></li>
                                         <li><a href="./partners.html">O nosso trabalho humanitário</a></li>
                                         <li><a href="./partners.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
@@ -308,9 +308,9 @@
                                     </ul>
                                 </li>
                                 <a href="#" class="primary-btn" style="
-                                        right: 0;
-                                        position: absolute;
-                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                    right: 0;
+                                    position: absolute;
+                                "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
@@ -722,8 +722,8 @@
                     <div class="col-lg-4 col-md-8">
                         <div class="footer__newslatter">
                             <form action="#">
-                                <input type="text" placeholder="Email">
-                                <button type="submit" class="site-btn">Subscrever</button>
+                                <!-- <input type="text" placeholder="Email">
+                                <button type="submit" class="site-btn">Subscrever</button> -->
                             </form>
                         </div>
                     </div>
@@ -811,6 +811,7 @@
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
+
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
