--- a/team.html
+++ b/team.html
@@ -452,7 +452,7 @@
             </div>
 
 
-            <div class="row mb-4">
+            <div class="row mt-6  mb-4">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <div class="icone">
@@ -533,11 +533,11 @@
 
             </div>
 
-            <div class="row mb-4">
+            <div class="row mt-6  mb-4">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <div class="icone">
-                            <img src="img/icons/ENFERM.png" alt="">
+                            <img src="img/icons/cleanig.png" alt="">
                         </div>
                         <h2>Higienização</h2>
                         <!-- <span class="subtitle">A sua opinião é valiosa para nós!</span> -->
@@ -616,11 +616,11 @@
 
 
 
-            <div class="row mb-4">
+            <div class="row mt-6 mb-4">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <div class="icone">
-                            <img src="img/icons/ENFERM.png" alt="">
+                            <img src="img/icons/pt.png" alt="">
                         </div>
                         <h2>Parcerias</h2>
                         <!-- <span class="subtitle">A sua opinião é valiosa para nós!</span> -->
