--- a/about.html
+++ b/about.html
@@ -149,8 +149,8 @@
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Consulta Pré-parto</a></li>
-                                                    <li><a href="#">Consulta Pós-parto</a></li>
+                                                    <li><a href="consultas.html">Consulta Pré-parto</a></li>
+                                                    <li><a href="consultas.html">Consulta Pós-parto</a></li>
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
@@ -504,7 +504,7 @@
 
 
     <!-- Seção de Rodapé Início -->
-    <footer class="footer">
+    <footer class="footer  mt-8">
         <div class="footer__top">
             <div class="container">
                 <div class="row">
