--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Consulta Pré-parto</a></li>
-                                                    <li><a href="#">Consulta Pós-parto</a></li>
+                                                    <li><a href="consultas.html">Consulta Pré-parto</a></li>
+                                                    <li><a href="consultas.html">Consulta Pós-parto</a></li>
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
@@ -478,37 +478,52 @@
                     <ul class="body-ul" id="c">
 
                         <li>
-                            <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                            <h5 class="subtitle mt-4 mt-4">Pediatria</h5>
+                            <a href="consultas.html">
+                                <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
+                                <h5 class="subtitle mt-4 mt-4">Consultas</h5>
+                            </a>
                         </li>
                         <li>
-                            <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
-                            <h5 class="subtitle mt-4">Nutrição</h5>
+                            <a href="">
+                                <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
+                                <h5 class="subtitle mt-4">Nutrição</h5>
+                            </a>
                         </li>
                         <li>
-                            <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
-                            <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
+                            <a href="">
+                                <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
+                                <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
+                            </a>
                         </li>
                         <li>
-                            <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                            <h5 class="subtitle mt-4">Vacinação</h5>
+                            <a href="">
+                                <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
+                                <h5 class="subtitle mt-4">Vacinação</h5>
+                            </a>
                         </li>
 
                         <li>
-                            <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
-                            <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
+                            <a href="">
+                                <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
+                                <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
+                            </a>
                         </li>
                         <li>
-                            <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                            <h5 class="subtitle mt-4">Vacinação</h5>
+                            <a href="">
+                                <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
+                                <h5 class="subtitle mt-4">Vacinação</h5>
+                            </a>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
                             <h5 class="subtitle mt-4">Nutrição</h5>
+                            </a>
                         </li>
                         <li>
-                            <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                            <h5 class="subtitle mt-4">Pediatria</h5>
+                            <a href="">
+                                <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
+                                <h5 class="subtitle mt-4">Pediatria</h5>
+                            </a>
                         </li>
                     </ul>
                 </div>
