--- a/consultas.html
+++ b/consultas.html
@@ -157,8 +157,10 @@
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="consultas.html">Consulta Pré-parto</a></li>
-                                                    <li><a href="consultas.html">Consulta Pós-parto</a></li>
+                                                    <li><a href="pages/amament-pre-parto.html#pre">Consulta
+                                                            Pré-parto</a></li>
+                                                    <li><a href="pages/amament-pre-parto.html#pos">Consulta
+                                                            Pós-parto</a></li>
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
@@ -389,10 +391,12 @@
                         <div class="services__item__text">
                             <h5>Amamentação</h5>
                             <ul>
-                                <li><a href="pages/amament-pre-parto.html"><i class="fa fa-check-circle"></i> Consulta
+                                <li><a href="pages/amament-pre-parto.html#pre"><i class="fa fa-check-circle"></i>
+                                        Consulta
                                         de Amamentação pré-parto</a>
                                 </li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Consulta de Amamentação pós-parto</a>
+                                <li><a href="pages/amament-pre-parto.html#pos"><i class="fa fa-check-circle"></i>
+                                        Consulta de Amamentação pós-parto</a>
                                 </li>
                             </ul>
                         </div>
