--- a/team.html
+++ b/team.html
@@ -157,8 +157,12 @@
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="consultas.html">Consulta Pré-parto</a></li>
-                                                    <li><a href="consultas.html">Consulta Pós-parto</a></li>
+
+                                                    <li><a href="pages/amament-pre-parto.html#pre">Consulta
+                                                            Pré-parto</a></li>
+                                                    <li><a href="pages/amament-pre-parto.html#pos">Consulta
+                                                            Pós-parto</a></li>
+
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
