--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -83,18 +83,18 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__btn">
-            <a href="../../#" class="primary-btn">Agendar</a>
+            <a href="../#" class="primary-btn">Agendar</a>
         </div>
         <ul class="offcanvas__widget">
-            <li><a href="../../#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
+            <li><a href="../#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20</li>
             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
         </ul>
         <div class="offcanvas__social">
-            <a href="../../#"><i class="fa fa-facebook"></i></a>
-            <a href="../../#"><i class="fa fa-twitter"></i></a>
-            <a href="../../#"><i class="fa fa-instagram"></i></a>
-            <a href="../../#"><i class="fa fa-linkedin"></i></a>
+            <a href="../#"><i class="fa fa-facebook"></i></a>
+            <a href="../#"><i class="fa fa-twitter"></i></a>
+            <a href="../#"><i class="fa fa-instagram"></i></a>
+            <a href="../#"><i class="fa fa-linkedin"></i></a>
         </div>
     </div>
 
@@ -107,7 +107,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <ul class="header__top__left">
-                            <li><a href="../../#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a>
+                            <li><a href="../#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a>
                             </li>
                             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
                             </li>
@@ -116,10 +116,10 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="header__top__right">
-                            <a href="../../#"><i class="fa fa-facebook"></i></a>
-                            <a href="../../#"><i class="fa fa-twitter"></i></a>
-                            <a href="../../#"><i class="fa fa-instagram"></i></a>
-                            <a href="../../#"><i class="fa fa-linkedin"></i></a>
+                            <a href="../#"><i class="fa fa-facebook"></i></a>
+                            <a href="../#"><i class="fa fa-twitter"></i></a>
+                            <a href="../#"><i class="fa fa-instagram"></i></a>
+                            <a href="../#"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="../.././index.html"><img src="../img/logo.png" style="width: 80%;" alt=""></a>
+                        <a href="../index.html"><img src="../img/logo.png" style="width: 80%;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-10">
@@ -138,16 +138,16 @@
                         <nav class="header__menu">
                             <ul>
                                 <!-- Início -->
-                                <!-- <li class="active"><a class="arrow" href="../.././index.html">INÍCIO</a></li> -->
+                                <!-- <li class="active"><a class="arrow" href="../index.html">INÍCIO</a></li> -->
 
                                 <!-- A Clínica -->
-                                <li><a class="arrow" href="../.././about.html">A Clínica <span
+                                <li><a class="arrow" href="../about.html">A Clínica <span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="../.././about.html">Sobre Nós</a></li>
-                                        <li><a href="../.././team.html">Equipa</a></li>
-                                        <li><a href="../.././partners.html">O nosso trabalho humanitário</a></li>
-                                        <li><a href="../.././partners.html">Pedido de informação/ Agendamento</a></li>
+                                        <li><a href="../about.html">Sobre Nós</a></li>
+                                        <li><a href="../team.html">Equipa</a></li>
+                                        <li><a href="../partners.html">O nosso trabalho humanitário</a></li>
+                                        <li><a href="../partners.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
                                 </li>
 
@@ -158,19 +158,19 @@
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../../consultas.html">Consulta Pré-parto</a></li>
-                                                    <li><a href="../../consultas.html">Consulta Pós-parto</a></li>
+                                                    <li><a href="../consultas.html">Consulta Pré-parto</a></li>
+                                                    <li><a href="../consultas.html">Consulta Pós-parto</a></li>
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../../#">Consulta</a></li>
+                                                    <li><a href="../#">Consulta</a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <span>Cirurgia</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../../#">Consulta de Cirurgia</a></li>
+                                                    <li><a href="../#">Consulta de Cirurgia</a></li>
                                                     <li><a href="../#">Circuncisão com anel</a></li>
                                                     <li><a href="../#">Sutura de feridas superficiais</a></li>
                                                 </ul>
@@ -226,7 +226,7 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href=".././additional-services.html">Vacinação<span
+                                <li><a class="arrow" href="../additional-services.html">Vacinação<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="../#">Adulto</a></li>
@@ -286,7 +286,7 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href=".././additional-services.html">Apoio ao domicílio <span
+                                <li><a class="arrow" href="../additional-services.html">Apoio ao domicílio <span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="../#">Amamentação</a></li>
@@ -295,7 +295,7 @@
                                         <li><a href="../#">Pacotes</a></li>
                                     </ul>
                                 </li><!-- Serviços Adicionais -->
-                                <li><a class="arrow" href=".././additional-services.html">Workshops<span
+                                <li><a class="arrow" href="../additional-services.html">Workshops<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="../#">Amamentação</a></li>
