--- a/index.html
+++ b/index.html
@@ -488,32 +488,32 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
                                 <h5 class="subtitle mt-4">Nutrição</h5>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
                                 <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
                                 <h5 class="subtitle mt-4">Vacinação</h5>
                             </a>
                         </li>
 
                         <li>
-                            <a href="">
+                            <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
                                 <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
                                 <h5 class="subtitle mt-4">Vacinação</h5>
                             </a>
@@ -524,7 +524,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
                                 <h5 class="subtitle mt-4">Pediatria</h5>
                             </a>
