--- a/consultas.html
+++ b/consultas.html
@@ -8,63 +8,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A clinica</title>
-    <link rel="fluid-icon" href="img/favicon.png" title="a clinica>
-    <!-- Google Font -->
-    <link href=" https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+    <l <link rel="icon" href="img/favicon.png" type="image/png">
+        <!-- Google Font -->
+        <link href=" https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet">
 
-    <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/flaticon.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+        <!-- Css Styles -->
+        <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="css/flaticon.css" type="text/css">
+        <link rel="stylesheet" href="css/nice-select.css" type="text/css">
+        <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
+        <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+        <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+        <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
 
-    <style>
-        b {
-            color: #d6a294;
-            font-weight: 400;
-        }
+        <style>
+            b {
+                color: #d6a294;
+                font-weight: 400;
+            }
 
-        .blog__details__hero {
-            padding: 200px 0;
-            margin-bottom: 30px;
-            border-radius: 10px;
-        }
+            .blog__details__hero {
+                padding: 200px 0;
+                margin-bottom: 30px;
+                border-radius: 10px;
+            }
 
-        .blog__details__pic img {
-            min-width: 100%;
-            margin-bottom: 30px;
-            border-radius: 10px;
-        }
+            .blog__details__pic img {
+                min-width: 100%;
+                margin-bottom: 30px;
+                border-radius: 10px;
+            }
 
-        .consultation__video {
-            height: 674px;
-            width: 1200px;
-        }
+            .consultation__video {
+                height: 674px;
+                width: 1200px;
+            }
 
-        .employer {
-            height: 450px !important;
-            border-radius: 15px;
-        }
+            .employer {
+                height: 450px !important;
+                border-radius: 15px;
+            }
 
-        .about .container {
-            padding-bottom: 0;
-            border: none;
-        }
+            .about .container {
+                padding-bottom: 0;
+                border: none;
+            }
 
-        .team-content p {
-            color: #d6a294;
-        }
+            .team-content p {
+                color: #d6a294;
+            }
 
-        .team-content {
-            padding: 5px;
-        }
-    </style>
+            .team-content {
+                padding: 5px;
+            }
+        </style>
 </head>
 
 <body>
