--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A clinica</title>
-    <link rel="fluid-icon" href="img/favicon.png" title="a clinica>
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- Google Font -->
     <link href=" https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
